2015-06-06  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* plugins/actions/preferences/dialog-preferences.ui:
	Fix bug #23622 : Make autosave setting in preferences work and other improvements. (Patch by Tomáš Hnyk)

2015-05-06  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	* src/gui/textviewcell.h:
	* src/subtitleview.cc:
	Fix bug #23569 : Cursor cannot be moved with mouse when editing subtitles.

2015-04-30  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix bug #23521 : Videos, waveform and keyframe files drag'n'dropped do not show up in recently opened

2015-04-30  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/dialog-dialoguize-preferences.ui:
	* plugins/actions/dialoguize/dialoguize.cc:
	* plugins/actions/styleeditor/dialog-style-editor.ui:
	* plugins/actions/styleeditor/styleeditor.cc:
	Fix bug #23470 : Style editor does not permit margins to go over 100 and other problems

2015-04-29  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/Makefile.am:
	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui:
	* plugins/actions/errorchecking/dialog-error-checking.ui:
	* plugins/actions/errorchecking/errorchecking.h:
	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	* plugins/actions/errorchecking/errorcheckingpreferences.h:
	* plugins/actions/errorchecking/maxcharactersperline.h:
	* plugins/actions/errorchecking/maxcharacterspersecond.h:
	* plugins/actions/errorchecking/maxlinepersubtitle.h:
	* plugins/actions/errorchecking/mincharacterspersecond.h:
	* plugins/actions/errorchecking/mindisplaytime.h:
	* plugins/actions/errorchecking/mingapbetweensubtitles.h:
	* plugins/actions/errorchecking/overlapping.h:
	* plugins/actions/errorchecking/toolongdisplaytime.h: